second commit of story 1

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -19,13 +19,16 @@
         <td><%= image_tag(tweet.photo) %></td>
         <td><%= tweet.user %></td>
         <td><%= link_to 'Show', tweet %></td>
-        <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-        <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user&.id == tweet.user_id %>
+          <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
+          <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Tweet', new_tweet_path %>
+<% if current_user %>
+  <%= link_to 'New Tweet', new_tweet_path %>
+<% end %>
