--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,65 +1,47 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2">
+      <h2>Tweets</h2>
+      <% if current_user %>
+          <h2 class="text-primary">
+            <%= flash[:alert] = "Bienvenido" %>
+          </h2>
+        <%= link_to 'Create a New Tweet', new_tweet_path, class: "btn btn-info btn-sm" %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
-<h1>Tweets</h1>
-
-<% if current_user %>
-  <%= link_to 'New Tweet', new_tweet_path %>
-<% end %>
-
-<!-- <table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>Profile Photo</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tweets.each do |tweet| %>
-      <tr>
-        <td><%= tweet.content %></td>
-        <td><%= image_tag(tweet.photo) %></td>
-        <td><%= tweet.user %></td>
-        <td><%= link_to 'Show', tweet %></td>
-        <% if current_user&.id == tweet.user_id %>
-          <td><%= link_to 'Edit', edit_tweet_path(tweet) %></td>
-          <td><%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-        <td>
-          <span class="parent-likes">
-            <span class="like_count" <%= tweet.id %> > 
-              <%= tweet.get_likes.size %> &#128077
-            </span>
-            <a>
-                <div> <%= link_to like_tweet_path(tweet, 'unlike'), class: "unlike-btn", method: :put, remote: :true do %> Unlike </div>
-                <% end %>
-                <% else %>
-                <div> <%= link_to like_tweet_path(tweet, 'like'), class: "like-btn", method: :put, remote: :true do %> Like </div>
-                <% end %>
-            </a>
-          </span>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table> -->
+<br>
 
 <div class="row">
   <% @tweets.reverse.each do |tweet| %>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <%= link_to(image_tag(tweet.photo), tweet) if tweet.photo? %>
+        <%= link_to(image_tag(tweet.user.profile_photo), tweet) if tweet.user.profile_photo? %>
         <div class="caption">
-          <h3><%= tweet.content %></h3>
+          <h3><%= tweet.content.truncate(150) %></h3>
           <small><%= time_ago_in_words(tweet.created_at) %> ago</small>
-          <p><%= tweet.content.truncate(150)  %></p>
-          <p><%= link_to 'Show', tweet, class: "btn btn-primary" %>
+          <!-- <p><%= link_to 'Show', tweet, class: "btn btn-primary" %>
             <% if current_user&.id == tweet.user_id %>
               <%= link_to 'Edit', edit_tweet_path(tweet), class: "btn btn-warning" %> 
               <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
-            <% end %>
+            <% end %> -->
+            <br>
+            <span class="parent-likes">
+              <span class="like_count" <%= tweet.id %> > 
+                <%= tweet.get_likes.size %> &#128077
+              </span>
+              <a>
+                <div class=""> <%= link_to like_tweet_path(tweet, 'like'), class: "like-btn", method: :put, remote: :true do %> Like </div>
+                <% end %>
+                <% else %>
+                <div class=""> <%= link_to like_tweet_path(tweet, 'unlike'), class: "unlike-btn", method: :put, remote: :true do %> Unlike </div>
+                <% end %>
+              </a>
+            </span>
+            <br>
+            <%= link_to 'Retweet', tweet %>
         </div>
       </div>
     </div>
