--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -18,30 +18,26 @@
   <% @tweets.reverse.each do |tweet| %>
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        <%= link_to(image_tag(tweet.user.profile_photo), tweet) if tweet.user.profile_photo? %>
+        <%= image_tag(tweet.user.profile_photo, width: "40%") %> dice:
         <div class="caption">
-          <h3><%= tweet.content.truncate(150) %></h3>
+          <% if tweet.origin_tweet.nil? %>
+            <h3><%= tweet.content.truncate(150) %></h3>
+          <% else %>
+            <%= image_tag(tweet.original_tweet.user.profile_photo, width: "20%") %> <%= tweet.original_tweet.user.user_name %> dice:
+            <div class="container mx-auto">
+              <%= tweet.content.truncate(150) %>
+            </div>
+          <% end %>
           <small><%= time_ago_in_words(tweet.created_at) %> ago</small>
-          <p><%= link_to 'Show', tweet, class: "btn btn-primary" %>
-            <% if current_user&.id == tweet.user_id %>
-              <%= link_to 'Edit', edit_tweet_path(tweet), class: "btn btn-warning" %> 
-              <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
-            <% end %>
+            <!-- <p><%= link_to 'Show', tweet, class: "btn btn-primary" %>
+              <% if current_user&.id == tweet.user_id %>
+                <%= link_to 'Edit', edit_tweet_path(tweet), class: "btn btn-warning" %> 
+                <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+              <% end %> -->
             <br>
-            <span class="parent-likes">
-              <span class="like_count" <%= tweet.id %> > 
-                <%= tweet.get_likes.size %> &#128077
-              </span>
-              <a>
-                <div class=""> <%= link_to like_tweet_path(tweet, 'like'), class: "like-btn", method: :put, remote: :true do %> Like </div>
-                <% end %>
-                <% else %>
-                <div class=""> <%= link_to like_tweet_path(tweet, 'unlike'), class: "unlike-btn", method: :put, remote: :true do %> Unlike </div>
-                <% end %>
-              </a>
-            </span>
+            <%= link_to 'Like', tweet_like_path(tweet), method: :post %> <%= tweet.likes.count %>
             <br>
-            <%= link_to 'Retweet', tweet %>
+            <%= link_to 'Retweet', tweet_retweet_path(tweet), method: :post %>
         </div>
       </div>
     </div>
