--- a/app/views/tweets/like.js.erb
+++ b/app/views/tweets/like.js.erb
@@ -1,4 +1,4 @@
-$('.unlike-btn').on('ajax:success', function(){
+<!-- $('.unlike-btn').on('ajax:success', function(){
     $(this).parent().parent().find('.like_count')
     .html('<%= @tweet.get_likes.size %> &#128078');
     $(this).closest('.unlike-btn').html('Unlike');
@@ -8,4 +8,4 @@ $('.like-btn').on('ajax:success', function(){
     $(this).parent().parent().find('.like_count')
     .html('<%= @tweet.get_likes.size %> &#128077');
     $(this).closest('.like-btn').html('Like');
-});
+}); -->
