--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -16,10 +16,10 @@
     <%= form.text_area :content %>
   </div>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= form.label :photo %>
     <%= form.text_field :photo %>
-  </div>
+  </div> -->
 
   <div class="actions">
     <%= form.submit %>
