search bar fixed

--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -51,6 +51,6 @@
 </div>
 
 <br>
-  <%= will_paginate @tweets, :previous_label => '', :next_label => 'Mostrar más tweets' %>
+  <%= will_paginate @paginated_tweets, :previous_label => '', :next_label => 'Mostrar más tweets' %>
 <br>
 
